# rdc-video-bot

./: .gitignore  README.md  pyproject.toml
rdc_video_bot/: config.py  main.py  requirements.txt  script.py  sheet.py
